--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "@ng-bootstrap/ng-bootstrap": "^14.1.1",
+    "@ng-select/ng-select": "^10.0.4",
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.3.0-alpha3",
     "bootstrap-icons": "^1.10.5",
